--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -778,7 +778,11 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     __observeOffsetHeight() {
-      this._dispatchIronResizeEventIfNeeded('Height', this.offsetHeight);
+      this.__observeOffsetHeightDebouncer = Polymer.Debouncer.debounce(
+        this.__observeOffsetHeightDebouncer,
+        Polymer.Async.animationFrame, () => {
+          this._dispatchIronResizeEventIfNeeded('Height', this.offsetHeight);
+        });
     }
 
     /**
