--- a/test/visual/vaadin-number-field/number-field-rtl.html
+++ b/test/visual/vaadin-number-field/number-field-rtl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head lang="ar">
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>RTL tests</title>
   <script>
     window.polymerSkipLoadingFontRoboto = true;
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <fieldset id="tests">
     <vaadin-number-field label="كلمه السر" placeholder="أنشئ كلمة مرور"></vaadin-number-field>
     <vaadin-number-field label="كلمه السر" value="987654321987"></vaadin-number-field>
