--- a/test/visual/vaadin-text-field/text-field-slotted.html
+++ b/test/visual/vaadin-text-field/text-field-slotted.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head lang="en">
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Slotted input tests</title>
   <script>
     window.polymerSkipLoadingFontRoboto = true;
@@ -17,7 +17,7 @@
 
   <fieldset id="tests">
     <vaadin-text-field value="Foo">
-      <input type="text" slot="input">
+      <input type="text" slot="input" />
     </vaadin-text-field>
   </fieldset>
 
