--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -164,6 +164,7 @@ This program is available under Apache License Version 2.0, available at https:/
           super.ready();
           this._updateHeight();
           this.addEventListener('animationend', this._onAnimationEnd);
+          this.__safari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
         }
 
         /** @private */
@@ -201,7 +202,9 @@ This program is available under Apache License Version 2.0, available at https:/
             input.style.maxWidth = inputWidth;
             input.style.height = 'auto';
             // Avoid a jumpy Safari rendering issue
-            inputField.style.display = 'block';
+            if (this.__safari) {
+              inputField.style.display = 'block';
+            }
           }
           this._oldValueLength = valueLength;
 
