--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -296,7 +296,7 @@ This program is available under Apache License Version 2.0, available at https:/
           inputField.scrollTop = scrollTop;
           document.documentElement.scrollTop = y;
 
-          this._dispatchIronResizeEventIfNeeded('InputHeight', inputHeight);
+          this._dispatchIronResizeEventIfNeeded('InputHeight', getComputedStyle(this._textAreaWrapper).height);
         }
 
         /**
