--- a/test/text-area-validation.html
+++ b/test/text-area-validation.html
@@ -1,25 +1,25 @@
 <!doctype html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>vaadin-text-area validation tests</title>
+  <meta charset="UTF-8">
+  <title>vaadin-text-area validation tests</title>
 
-    <script src="../../web-component-tester/browser.js"></script>
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../../test-fixture/test-fixture.html">
-    <link rel="import" href="../vaadin-email-field.html">
-    <link rel="import" href="../vaadin-number-field.html">
-    <link rel="import" href="../vaadin-password-field.html">
-    <link rel="import" href="../vaadin-text-area.html">
-    <link rel="import" href="../vaadin-text-field.html">
-    <link rel="import" href="../../iron-form/iron-form.html">
-    <link rel="import" href="helpers.html">
+  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../test-fixture/test-fixture.html">
+  <link rel="import" href="../vaadin-email-field.html">
+  <link rel="import" href="../vaadin-number-field.html">
+  <link rel="import" href="../vaadin-password-field.html">
+  <link rel="import" href="../vaadin-text-area.html">
+  <link rel="import" href="../vaadin-text-field.html">
+  <link rel="import" href="../../iron-form/iron-form.html">
+  <link rel="import" href="helpers.html">
 </head>
 
 <body>
 <script>
   var el = 'vaadin-text-area';
-  describe(`${el}: initial validation`, () => {
+  describe(`initial validation`, () => {
     let field, validateSpy;
 
     beforeEach(() => {
