--- a/test/text-area-validation.html
+++ b/test/text-area-validation.html
@@ -31,28 +31,14 @@
     });
 
     it('should not validate when the field has an initial value', async() => {
-      field.value = `
-          there
-          should
-          be
-          a
-          lot
-          of
-          rows`;
+      field.value = 'Initial Value';
       document.body.appendChild(field);
       await nextRender();
       expect(validateSpy.called).to.be.false;
     });
 
     it('should not validate when the field has an initial value and invalid', async() => {
-      field.value = `
-          there
-          should
-          be
-          a
-          lot
-          of
-          rows`;
+      field.value = 'Initial Value';
       field.invalid = true;
       document.body.appendChild(field);
       await nextRender();
