--- a/test/text-field-validation.html
+++ b/test/text-field-validation.html
@@ -31,14 +31,14 @@
     });
 
     it('should not validate when the field has an initial value', async() => {
-      field.value = 'foo@example.com';
+      field.value = 'Initial Value';
       document.body.appendChild(field);
       await nextRender();
       expect(validateSpy.called).to.be.false;
     });
 
     it('should not validate when the field has an initial value and invalid', async() => {
-      field.value = 'foo@example.com';
+      field.value = 'Initial Value';
       field.invalid = true;
       document.body.appendChild(field);
       await nextRender();
