--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -480,7 +480,7 @@ This program is available under Apache License Version 2.0, available at https:/
      */
     _valueChanged(newVal, oldVal) {
       // setting initial value to empty string, skip validation
-      if (oldVal === undefined) {
+      if (newVal === '' && oldVal === undefined) {
         return;
       }
 
@@ -498,7 +498,7 @@ This program is available under Apache License Version 2.0, available at https:/
         this.value = this.inputElement.value = '';
       }
 
-      if (this.invalid) {
+      if (this.invalid && oldVal !== undefined) {
         this.validate();
       }
     }
