--- a/test/text-area-validation.html
+++ b/test/text-area-validation.html
@@ -8,6 +8,7 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../vaadin-text-area.html">
   <link rel="import" href="helpers.html">
+  <link rel="import" href="../../test-fixture/test-fixture.html">
 </head>
 
 <body>
