--- a/test/number-field-validation.html
+++ b/test/number-field-validation.html
@@ -8,9 +8,15 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../vaadin-number-field.html">
   <link rel="import" href="helpers.html">
+  <link rel="import" href="../../test-fixture/test-fixture.html">
 </head>
 
 <body>
+ <test-fixture id="basic">
+    <template>
+      <vaadin-number-field></vaadin-number-field>
+    </template>
+  </test-fixture>
 <script>
   describe(`initial validation`, () => {
     let field, validateSpy;
@@ -43,6 +49,34 @@
       document.body.appendChild(field);
       await nextRender();
       expect(validateSpy.called).to.be.false;
+    });
+  });
+  describe('basic', () => {
+    let numberField;
+
+    beforeEach(() => {
+      numberField = fixture('basic');
+    });
+
+    it('should fire a validated event on validation success', () => {
+      const validatedSpy = sinon.spy();
+      numberField.addEventListener('validated', validatedSpy);
+      numberField.validate();
+
+      expect(validatedSpy.calledOnce).to.be.true;
+      const event = validatedSpy.firstCall.args[0];
+      expect(event.detail.valid).to.be.true;
+    });
+
+    it('should fire a validated event on validation failure', () => {
+      const validatedSpy = sinon.spy();
+      numberField.addEventListener('validated', validatedSpy);
+      numberField.required = true;
+      numberField.validate();
+
+      expect(validatedSpy.calledOnce).to.be.true;
+      const event = validatedSpy.firstCall.args[0];
+      expect(event.detail.valid).to.be.false;
     });
   });
 </script>
